// TransferDataPacket
syntax = "proto2";
package pl.inder00.opensource.sectors.protocol.protobuf;
import "ProtoGeneric.proto";
option java_outer_classname = "TransferPacket";

// Tansfer packet
message PlayerTransferPacket {
  required ProtoUUID playerUniqueId = 1;
  required ProtoLocation playerLocation = 2;
  required ProtoLocation compassLocation = 3;
  required ProtoPlayerAbilities playerAbilities = 4;
  required ProtoPlayerInventory playerInventory = 5;
  required bytes enderchestContent = 6;
  required bytes potionEffects = 7;
}

// Player abilities
message ProtoPlayerAbilities {
  required uint32 gamemode = 1;
  required bool flyingAllowed = 2;
  required bool flying = 3;
  required float fallDistance = 4;
  required double health = 5;
  required double maxHealth = 6;
  required uint32 foodLevel = 7;
  required uint32 fireTicks = 8;
  required uint32 totalXP = 9;
  required float saturation = 10;
  required float flySpeed = 11;
  required float walkSpeed = 12;
  required float exhaustion = 13;
  required uint32 heldSlot = 14;
}

// Player inventory
message ProtoPlayerInventory {
  required bytes inventoryContent = 1;
  required bytes armourContent = 2;
  optional bytes extraContent = 3;
  optional bytes storageContent = 4;
}